0000-00-00: SVN
 * General:
   * Fix: Dull radar player colors were replaced by brighter colors.
   * Change: Effect of skirmish modifier slider increased by 20%.
   * Change: 'ENTER' key brings up the chat dialog instead of 'T'.
 * Aivolution AI:
   * Fix: Using "go <player>" command makes Aivolution send its units to the proper player now.
 * Balancing (Multiplayer):
   * Change: Tank Killer now fires four projectiles instead of two, total firepower is unaffected.

2008-03-16: Version 2.1_beta2
 * General:
   * New: Preview of italian (35% complete), french (25%) and russian (9%) translations
   * Fix: Crash (integer divide by zero) when starting a multiplayer game after playing a single player game
   * Fix: A memory corruption in structure limits could cause destroy button to disappear (among other things)
   * Fix: Crash during saving in multiplayer/skirmish mode, when Aivolution AI is enabled (bug #11084)
   * Fix: Special characters would be printed as '?' (bug #10913)
   * Fix: Warzone could lock up, trying to pick a droid (bug #11250)
 * Graphics:
   * New: Replaced old menu backdrops with new, high-res ones
   * Change: Reduce the number of atmospheric particles generated and lower the CPU usage
   * Fix: Briefings were not displayed at high resolutions (bug #11121)
   * Fix: Fonts were not displayed with QuesoGLC 0.7.0 (patch #961)
   * Fix: Fireworks looked crappy (patch #994)
 * AI:
   * Fix: Restarting a map caused "unable to load experience" messages (bug #11085)
   * Fix: Upgrade power generator with powModule instead of resModule (bug #11122)
   * Fix: AI opponents would use the medium yellow body all the time (bug #11097)
 * Balancing (Multiplayer):
   * Change: Let weapons with high ROF but low damage deal damage too (bug #11191)
   * Change: Fortress balacing adapted

2008-02-17: Version 2.1_beta1
 * General:
   * New: i18n support (German translation at 95%, dansk 13%, dutch 11%)
   * New: Optional additional AI: Aivolution