@@ -105,6 +105,36 @@ typedef struct {
 
 IMAGEFILE *IntImages;	// All the 2d graphics for the user interface.
 
+static const uint16_t MousePointerImageIDs[CURSOR_MAX] =
+{
+	IMAGE_CURSOR_DEFAULT,	// CURSOR_ARROW
+	IMAGE_CURSOR_DEST,	// CURSOR_DEST
+	IMAGE_CURSOR_DEFAULT,	// CURSOR_SIGHT
+	IMAGE_CURSOR_DEFAULT,	// CURSOR_TARGET
+	IMAGE_CURSOR_DEFAULT,	// CURSOR_LARROW      
+	IMAGE_CURSOR_DEFAULT,	// CURSOR_RARROW      
+	IMAGE_CURSOR_DEFAULT,	// CURSOR_DARROW      
+	IMAGE_CURSOR_DEFAULT,	// CURSOR_UARROW      
+	IMAGE_CURSOR_DEFAULT,	// CURSOR_DEFAULT     
+	IMAGE_CURSOR_DEFAULT,	// CURSOR_EDGEOFMAP   
+	IMAGE_CURSOR_ATTACH,	// CURSOR_ATTACH      
+	IMAGE_CURSOR_ATTACK,	// CURSOR_ATTACK      
+	IMAGE_CURSOR_DEFAULT,	// CURSOR_BOMB        
+	IMAGE_CURSOR_BRIDGE,	// CURSOR_BRIDGE      
+	IMAGE_CURSOR_BUILD,	// CURSOR_BUILD       
+	IMAGE_CURSOR_EMBARK,	// CURSOR_EMBARK      
+	IMAGE_CURSOR_FIX,	// CURSOR_FIX         
+	IMAGE_CURSOR_GUARD,	// CURSOR_GUARD       
+	IMAGE_CURSOR_ECM,	// CURSOR_JAM         
+	IMAGE_CURSOR_LOCKON,	// CURSOR_LOCKON      
+	IMAGE_CURSOR_DEFAULT,	// CURSOR_MENU        
+	IMAGE_CURSOR_MOVE,	// CURSOR_MOVE        
+	IMAGE_CURSOR_NOTPOS,	// CURSOR_NOTPOSSIBLE 
+	IMAGE_CURSOR_PICKUP,	// CURSOR_PICKUP      
+	IMAGE_CURSOR_REPAIR,	// CURSOR_SEEKREPAIR  
+	IMAGE_CURSOR_SELECT,	// CURSOR_SELECT      
+};
+
 /** Form frame definition for normal frames. */
 IMAGEFRAME FrameNormal = {
 	0,0, 0,0,
@@ -188,6 +218,7 @@ TABDEF	SmallTab = {
 BOOL imageInitBitmaps(void)
 {
 	IntImages = (IMAGEFILE*)resGetData("IMG", "intfac.img");
+	pie_InitColourMouse(IntImages, MousePointerImageIDs);
 
 	return true;
 }
