@@ -211,7 +211,10 @@ GAMECODE gameLoop(void)
 						 && CoordInRadar(mouseX(), mouseY())
 						 && getHQExists(selectedPlayer) ) ) )
 			{
-				frameSetCursor(CURSOR_DEFAULT);
+				// Set the default uncoloured cursor here, since it looks slightly
+				// better for menus and such.
+				pie_SetMouse(CURSOR_DEFAULT, false);
+
 				intRetVal = INT_INTERCEPT;
 			}
 
@@ -430,6 +433,10 @@ GAMECODE gameLoop(void)
 	}
 	else // paused
 	{
+		// Set the default uncoloured cursor here, since it looks slightly
+		// better for menus and such.
+		pie_SetMouse(CURSOR_DEFAULT, false);
+
 		intRetVal = INT_NONE;
 		if (loop_GetVideoStatus())
 		{
